Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Your code here -->
   <img src="https://i.pinimg.com/originals/c0/d6/25/c0d625a7ef5bc800380b76186f4f1e06.jpg" alt="Lion wallpaper">
   <img src="https://s.hswstatic.com/gif/hippo-milk-pink-orig.jpg" alt="Hippo with mom">
-  <img src="https://images.unsplash.com/photo-1531989417401-0f85f7e673f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" alt="Monkey looking at the mirror">
+  <img src="https://image.shutterstock.com/image-photo/funny-monkey-looks-mirror-sits-260nw-1214590123.jpg" alt="Monkey looking at the mirror">
 
 </body>
 </html>
