--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Your code here -->
   <img src="https://i.pinimg.com/originals/c0/d6/25/c0d625a7ef5bc800380b76186f4f1e06.jpg" alt="Lion wallpaper">
   <img src="https://s.hswstatic.com/gif/hippo-milk-pink-orig.jpg" alt="Hippo with mom">
-  <img src="https://image.shutterstock.com/image-photo/funny-monkey-looks-mirror-sits-260nw-1214590123.jpg" alt="Monkey looking at the mirror">
+  <img src="https://image.shutterstock.com/image-photo/funny-monkey-looks-mirror-sits-260nw-1214590123.jpg"
+  alt="Monkey looking at the mirror">
 
 </body>
 </html>
